bin/tests/snapshots/inherit_ordering__c0f2a4fd94c9adb927f6985744cf7f6d_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit b a; }
---
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:1:13 ]
   │
 1 │ { inherit b a; }
   │             ┬  
   │             ╰── a is out of alphabetical order
───╯
