bin/tests/snapshots/inherit_ordering__c9f254422a8b3465076bf6fb83de40fb_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    # about mkMerge
    mkMerge
    # about mkIf
    mkIf
    ;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,8 @@
 {
   inherit (lib)
+    # about mkIf
+    mkIf
     # about mkMerge
     mkMerge
-    # about mkIf
-    mkIf
     ;
 }
