bin/tests/snapshots/inherit_ordering__c9f254422a8b3465076bf6fb83de40fb_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    # about mkMerge
    mkMerge
    # about mkIf
    mkIf
    ;
}
---
<temp_file_path>>6:5:W:39:[inherit_ordering] `mkIf` is out of alphabetical order
