bin/tests/snapshots/inherit_ordering__c9f254422a8b3465076bf6fb83de40fb_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit (lib)
    # about mkMerge
    mkMerge
    # about mkIf
    mkIf
    ;
}
---
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:6:5 ]
   │
 6 │     mkIf
   │     ──┬─  
   │       ╰─── mkIf is out of alphabetical order
───╯
