bin/tests/snapshots/inherit_ordering__cc59768e4fca4d3a61caef15e5aa6ce3_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit apple zebra
    middle;
  other = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 {
-  inherit apple zebra
-    middle;
+  inherit apple middle
+    zebra;
+
   other = true;
 }
