bin/tests/snapshots/inherit_ordering__cc59768e4fca4d3a61caef15e5aa6ce3_lint_json.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit apple zebra
    middle;
  other = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 16
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "{\n  inherit apple zebra\n    middle;\n\n  other = true;\n}"
          }
        }
      ]
    },
    {
      "name": "inherit_ordering",
      "note": "Inherited names are not in alphabetical order",
      "code": 39,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 5
            },
            "to": {
              "line": 3,
              "column": 11
            }
          },
          "message": "`middle` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 3
              },
              "to": {
                "line": 3,
                "column": 12
              }
            },
            "fix": "inherit apple middle\n    zebra;"
          }
        }
      ]
    }
  ]
}
