bin/tests/snapshots/inherit_ordering__cc59768e4fca4d3a61caef15e5aa6ce3_lint_stderr.snap
---
source: bin/tests/inherit_ordering.rs
---
{
  inherit apple zebra
    middle;
  other = true;
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   other = true;
   │   ──────┬──────  
   │         ╰──────── a blank line should follow the inherit above
───╯
[inherit_ordering] Warning: Inherited names are not in alphabetical order
   ╭─[ <temp_file_path>:3:5 ]
   │
 3 │     middle;
   │     ───┬──  
   │        ╰──── middle is out of alphabetical order
───╯
