bin/tests/snapshots/inherit_ordering__f93cf6689e51204c48fa8c536d993259_fix.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit (lib) mkMerge mkIf; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ inherit (lib) mkMerge mkIf; }
+{ inherit (lib) mkIf mkMerge; }
