bin/tests/snapshots/inherit_ordering__f93cf6689e51204c48fa8c536d993259_lint_errfmt.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit (lib) mkMerge mkIf; }
---
<temp_file_path>>1:25:W:39:[inherit_ordering] `mkIf` is out of alphabetical order
