bin/tests/snapshots/inherit_ordering__f93cf6689e51204c48fa8c536d993259_lint_json.snap
---
source: bin/tests/inherit_ordering.rs
---
{ inherit (lib) mkMerge mkIf; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_ordering",
      "note": "Inherited names are not in alphabetical order",
      "code": 39,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 25
            },
            "to": {
              "line": 1,
              "column": 29
            }
          },
          "message": "`mkIf` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 3
              },
              "to": {
                "line": 1,
                "column": 30
              }
            },
            "fix": "inherit (lib) mkIf mkMerge;"
          }
        }
      ]
    }
  ]
}
